# corp_gym

./: .env.example  .gitignore  Blog.MD  CORP_ENV_Implementation_Guide.md  Dockerfile  README.md  eval.py  eval_genral.py  eval_t4.py  inference.py  notebook466c72b6cd.ipynb  openenv.yaml  plot_loss.py  plot_results.py  pyproject.toml
client/: __init__.py  client.py
corp_env/: __init__.py  models.py
data/: README.md
docs/: lightning_hf_runbook.md
env_artifacts/: README.md  requirements_frozen.txt  requirements_lightning_h100.txt  setup_lightning_h100.sh
hf_jobs/: README.md  job_eval_deepseek14b_base_sft.yaml  job_eval_deepseek14b_sft.yaml  job_rlvr_deepseek14b.yaml  job_sft_deepseek14b.yaml  job_sft_nemotron_nvfp4_30b.yaml  run_all_jobs.sh  run_eval_deepseek14b_base_sft.sh  run_eval_deepseek14b_sft.sh  run_rlvr_deepseek14b.sh  run_sft_deepseek14b.sh  run_sft_nemotron_nvfp4_30b.sh
notebooks/: corp_env_trl_unsloth_training.ipynb  deepseek_r1_qwen14b_sft_rlvr.ipynb  nemotron_nano_30b_sft_rlvr.ipynb  qwen2_5_7b_sft_rlvr.ipynb  training.ipynb
results/: base_eval.jsonl  baseline_eval.jsonl  comparison_summary.csv  comparison_summary.md  e1_m1_verification_summary.json  example_verification_all.jsonl  example_verification_summary.json  grpo_eval.jsonl  h1_seed_all.jsonl  h1_seed_summary.json  metadata.json  oracle_eval.jsonl  sft_eval.jsonl
scripts/: _trajectory_utils.py  generate_sft_data.py  import_generated_examples.py  prepare_sft_data.py  run_data_pipeline.py  verify_examples.py
server/: __init__.py  app.py  environment.py  llm_env.py  memory.py  reward.py  (+3 more)
(+67 files in other folders)
