[project]
name = "corp-env"
version = "0.1.0"
description = "Multi-agent corporate decision environment with shared workspace document (SWD) for long-horizon planning."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openenv-core",
    "pydantic>=2",
    "fastapi",
    "uvicorn",
    "openai",
    "python-dotenv",
    "jsonpatch",
    "jsonpath-ng",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["corp_env", "server", "client"]

[project.scripts]
server = "server.app:main"
